--- a/views/students.twig
+++ b/views/students.twig
@@ -1,30 +1,41 @@
 {% extends "BASE.twig" %}
 
 {% block rows %}
-    <table class="table">
-        <caption>Студенты</caption>
-        <thead>
-        <tr>
-            <th>#</th>
-            <th>Имя</th>
-            <th></th>
-        </tr>
-        </thead>
-        <tbody>
-        {% for student in students %}
-            <tr>
-                <td><a href="/students/{{ student.id }}">{{ student.id }}</a></td>
-                <td>{{ student.name }}</td>
-                <td>
-                    <form method="POST" action="/students/{{ student.id }}">
-                        <input type="hidden" name="_method" value="DELETE">
-                        <button type="submit" class="btn btn-danger">Удалить</button>
-                    </form>
-                </td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+	<div class="row">
+		<div class="col-md-8">
+			<table class="table">
+				<caption>Студенты</caption>
+				<thead>
+				<tr>
+					<th>#</th>
+					<th>Имя</th>
+					<th></th>
+				</tr>
+				</thead>
+				<tbody>
+				{% for student in students %}
+					<tr id="student-{{ student.id }}">
+						<td><a href="/students/{{ student.id }}">{{ student.id }}</a></td>
+						<td>{{ student.name }}</td>
+						<td>
+							<form method="POST" action="/students/{{ student.id }}">
+								<input type="hidden" name="_method" value="DELETE">
+								<button type="submit" class="btn btn-danger">Удалить</button>
+							</form>
+							
+							{# Lab 4 ajax #}
+							<button type="submit" class="btn btn-danger btn-ajax" data-id="{{ student.id }}">Удалить AJAX</button>
+							<button class="btn btn-default btn-grades" data-id="{{ student.id }}">Показать оценки</button>
+					  
+						</td>
+					</tr>
+				{% endfor %}
+				</tbody>
+			</table>
+		</div>
+		<div class="col-md-4" id="grades">
+		</div>
+	</div>
     <form method="POST" action="/students" class="form-inline">
         <fieldset>
             <legend>Новый студент</legend>
@@ -34,4 +45,6 @@
             <button type="submit" class="btn btn-primary">Создать</button>
         </fieldset>
     </form>
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>	
+ <script src="/js/scripts.js"></script>	
 {% endblock %}
